<resources>
    <string name="app_name">EORA</string>

    <string name="view">View</string>


    <string name="hint_enter_a_message">Написать сообщение…</string>
    <string name="on_log_click_message">Your custom long click handler</string>
    <string name="action_delete">Удалить</string>
    <string name="action_copy">Скопировать</string>
    <string name="copied_message">Сообщение скопировано!</string>

    <string name="date_header_today">Today</string>
    <string name="date_header_yesterday">Yesterday</string>

    <string-array name="view_types_dialog">
        <item name="image">Image (default)</item>
        <item name="voice">Voice message (custom)</item>
    </string-array>

    <string name="pref_speakerphone_key">speakerphone_preference</string>
    <string name="pref_speakerphone_title">Speakerphone.</string>
    <string name="pref_speakerphone_dlg">Speakerphone.</string>
    <string name="pref_speakerphone_default">auto</string>

    <string name="action_fab_balance">Баланс</string>
    <string name="action_fab_transfer">Перевод</string>
    <string name="action_fab_consultation">Консультация с сотрудником</string>
    <string name="action_fab_block_card">Блокировка Карты</string>
    <string name="action_fab_history_payment">История Платежей</string>
    <string name="action_fab_near_atm">Ближайший банкомат</string>
    <string name="action_fab_currency">Курс Валют</string>
    <string name="action_fab_credits">Кредиты</string>

    <string name="switch_camera">Switch front/back camera</string>
    <string name="capture_format_change_text">Slide to change capture format</string>
    <string name="muted">Muted</string>
    <string name="toggle_debug">Toggle debug view</string>
    <string name="toggle_mic">Toggle microphone on/off</string>
    <string name="disconnect_call">Disconnect Call</string>

</resources>
